--- a/books.html
+++ b/books.html
@@ -65,77 +65,39 @@
         <div class="backHome">
             <a class="backHome-item" href="./index.html">HOME</a>
             <p style="margin: 0 4px; color: rgb(24, 135, 150);"> / </p>
-            <a class="backHome-item" href="#">VOCABYLARY TEST</a>
-
+            <a class="backHome-item" href="#">BOOKS</a>
         </div>
 
-        <div class="test">
-            <p class="title">
-                BƯỚC 1/2: KIỂM TRA TRÌNH ĐỘ CHUNG
-            </p>
-            <p class="SP-title">
-                Check vào từ mà bạn biết ít nhất một ý nghĩa, để trống nếu bạn không biết chính xác ý nghĩa của từ đó là gì
-            </p>
-        </div>
+        <div class="books">
+            <div class="book-item">
+                <img class="bookImg" src="./img/51u8ZRDCVoL._AC_SY780_.jpg" alt="">
+                <div style=" margin: 20px; " class="">
+                    <div class="bookName">Rich Dad, Poor Dad</div>
+                    <div class="bookAuthor">Robert T. Kiyosaki</div>
+                    <div class="bookDetail">Rich Dad, Poor Dad: What The Rich Teach Their Kids About Money - That The Poor And The Middle Class Do Not!</div>
+                </div>
+            </div>
 
-        <div class="test-content">
+            <div class="book-item">
+                <img class="bookImg" src="./img/51u8ZRDCVoL._AC_SY780_.jpg" alt="">
+                <div style=" margin: 20px; " class="">
+                    <div class="bookName">Rich Dad, Poor Dad</div>
+                    <div class="bookAuthor">Robert T. Kiyosaki</div>
+                    <div class="bookDetail">Rich Dad, Poor Dad: What The Rich Teach Their Kids About Money - That The Poor And The Middle Class Do Not!</div>
+                </div>
+            </div>
 
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                like
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                think
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                go
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                look
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                after
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                ask
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                next
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                like
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                like
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                like
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                like
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                like
-            </div>
-            <div class="test-item">
-                <input type="checkbox" name="" id="">
-                like
+            <div class="book-item">
+                <img class="bookImg" src="./img/51u8ZRDCVoL._AC_SY780_.jpg" alt="">
+                <div style=" margin: 20px; " class="">
+                    <div class="bookName">Rich Dad, Poor Dad</div>
+                    <div class="bookAuthor">Robert T. Kiyosaki</div>
+                    <div class="bookDetail">Rich Dad, Poor Dad: What The Rich Teach Their Kids About Money - That The Poor And The Middle Class Do Not!</div>
+                </div>
             </div>
         </div>
 
-        <a href="#" class="test-next">Tiếp Tục <i style="margin-left: 4px" class="fa-solid fa-arrow-right"></i></a>
-
+        
 
         <div id="footer">
             <iframe style=" border-radius: 20px; width: 30vw;  height: 30vw;   margin:18px 0 18px -30px" <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.031332061914!2d105.88605751420201!3d21.03143229306462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135a968a2703a33%3A0x4cc579c8cf3ef157!2zMTggTmcuIDE2My8zIFAuIFTGsCDEkMOsbmgsIExvbmcgQmnDqm4sIEjDoCBO4buZaSwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1661511004484!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
