--- a/STATISTICS.html
+++ b/STATISTICS.html
@@ -44,7 +44,7 @@
                 <a href="./STATISTICS.html" class="header-item">STATISTICS</a>
                 <a href="./LIBRARIES.html" class="header-item">LIBRARIES</a>
                 <a href="./VOCABULARYTEST.html" class="header-item"> VOCABULARY TEST</a>
-                <a href="./duAn.html" class="header-item"></a>
+                <a href="./books.html" class="header-item">BOOKS</a>
                 <a href="./index.html" class="header-item">HOME</a>
             </div>
     
